...
  "gatePoolWillRemainActiveUntilDepleted": "Pool will remain active until depleted",
  "@gatePoolWillRemainActiveUntilDepleted": { "description": "Temporary l10n gate value for existing literal: Pool will remain active until depleted" },

  "gateReCenter": "Re-center",
  "@gateReCenter": { "description": "Temporary l10n gate value for existing literal: Re-center" },

  "gateRecord20PushUpsAtALocalPark": "Record 20 push-ups at a local park",
  "@gateRecord20PushUpsAtALocalPark": { "description": "Temporary l10n gate value for existing literal: Record 20 push-ups at a local park" },

  "gateReportSubmitted": "Report submitted.",
  "@gateReportSubmitted": { "description": "Temporary l10n gate value for existing literal: Report submitted." },

  "gateReportUser": "Report user",
...
  "gateUserBlocked": "User blocked.",
  "@gateUserBlocked": { "description": "Temporary l10n gate value for existing literal: User blocked." },

  "gateUsername": "Username",
  "@gateUsername": { "description": "Temporary l10n gate value for existing literal: Username" },

  "gateVerificationCapture": "Verification Capture",
  "@gateVerificationCapture": { "description": "Temporary l10n gate value for existing literal: Verification Capture" },

  "gateVerificationCode": "Verification Code",
  "@gateVerificationCode": { "description": "Temporary l10n gate value for existing literal: Verification Code" },

  "gateVerify": "Verify",
...
